--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -5,10 +5,6 @@ body{
   height: 100%;
 }
 
-.nav{
-  height: 35px;  
-}
-
 .container{
   position: relative;
   min-height: 100%;
@@ -240,6 +236,8 @@ body{
 }
 /* With $enable-flex set to true this is already set */
 .card-deck {
+  height: 100%;
+  height: 100%;
   display: inline-block;
   flex-direction: row;
   flex: 1 0 0;
@@ -305,6 +303,8 @@ a.active{
 }
 
 .button {
+  width: 100%;
+  font-size: 12px;
   background: none;
   border: 2px solid;
   line-height: 0.5;
